--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://o2-systems-d482dda544c5.herokuapp.com
+VITE_API_URL=https://o2-systems-d482dda544c5.herokuapp.com/
+#VITE_API_URL=http://localhost:5000
